--- a/doc/pull-pkg.1
+++ b/doc/pull-pkg.1
@@ -1,7 +1,7 @@
 .TH PULL\-PKG "1" "28 August 2017" "ubuntu-dev-tools"
 
 .SH NAME
-pull\-pkg \- download a package for Debian, Ubuntu, or UCA
+pull\-pkg \- download a package for Debian, Ubuntu, UCA, or a PPA
 
 .SH SYNOPSIS
 .B pull\-pkg \fR[\fIoptions\fR]\fR <\fIpackage name\fR>
@@ -22,9 +22,11 @@ appropriately: these are
 and \fBpull\-lp\-udebs\fR, which all pull Ubuntu packages;
 \fBpull\-debian\-source\fR, \fBpull\-debian\-debs\fR, \fBpull\-debian\-ddebs\fR,
 and \fBpull\-debian\-udebs\fR, which all pull Debian packages;
-and \fBpull\-uca\-source\fR, \fBpull\-uca\-debs\fR, \fBpull\-uca\-ddebs\fR,
-and \fBpull\-uca\-udebs\fR, which all pull Ubuntu Cloud Archive packages.
-Each script pulls the file type in its name, i.e.
+\fBpull\-uca\-source\fR, \fBpull\-uca\-debs\fR, \fBpull\-uca\-ddebs\fR,
+and \fBpull\-uca\-udebs\fR, which all pull Ubuntu Cloud Archive packages;
+and \fBpull\-ppa\-source\fR, \fBpull\-ppa\-debs\fR, \fBpull\-ppa\-ddebs\fR,
+and \fBpull\-ppa\-udebs\fR, which all pull from a specified Personal Package
+Archive on Launchpad.  Each script pulls the file type in its name, i.e.
 \fIsource\fR, \fIdebs\fR, \fIddebs\fR, or \fIudebs\fR.
 
 .SH OPTIONS
@@ -46,8 +48,7 @@ For ubuntu, you can use either the release name like \fBxenial\fR
 or the release-pocket like \fBxenial-proposed\fR.
 For ubuntu cloud archive (uca) you can use either the uca release
 name like \fBmitaka\fR or the ubuntu and uca release names like
-\fBtrusty-mitaka\fR.
-Defaults to the current development release.
+\fBtrusty-mitaka\fR.  Defaults to the current development release.
 .TP
 .BR \-h ", " \-\-help
 Display a help message and exit.
@@ -82,10 +83,17 @@ source and binary files, but does not actually download any.
 Defaults to \fBsource\fR.
 .TP
 .B \-D \fIDISTRO\fR, \fB\-\-distro\fR=\fIDISTRO\fR
-Pull from: \fBdebian\fR, \fBuca\fR, or \fBubuntu\fR.
+Pull from: \fBdebian\fR, \fBuca\fR, \fBubuntu\fR, or a \fBppa\fR.
 \fBlp\fR can be used instead of \fBubuntu\fR.
 Any string containing \fBcloud\fR can be used instead of \fBuca\fR.
-Deafults to \fBubuntu\fR.
+If pulling from a ppa, you must specify the PPA.  Deafults to \fBubuntu\fR.
+.TP
+.B \-\-ppa\fR=ppa:\fIUSER/NAME\fR
+Applies only when \fBdistro\fR is \fIppa\fR.  Can be provided either as
+a value to the \fB\-\-ppa\fR option parameter, or as a plain option
+(like \fIrelease\fR or \fIversion\fR).  When specified as a plain option,
+the form must be \fBppa:USER/NAME\fR; when specified as a value to the
+\fB\-\-ppa\fR option parameter, the leading \fBppa:\fR is optional.
 
 .SH ENVIRONMENT
 All of the \fBCONFIGURATION VARIABLES\fR below are also supported as
@@ -106,7 +114,7 @@ The default mirror.
 .BR PULL_PKG_UBUNTU_MIRROR
 The default mirror when using the \fBpull\-pkg\fR script.
 .TP
-.BR PULL_[LP|DEBIAN|UCA]_[SOURCE|DEBS|DDEBS|UDEBS]_MIRROR
+.BR PULL_[LP|DEBIAN|PPA|UCA]_[SOURCE|DEBS|DDEBS|UDEBS]_MIRROR
 The default mirror when using the associated script.
 
 .SH SEE ALSO
@@ -119,6 +127,10 @@ The default mirror when using the associated script.
 .BR pull\-debian\-debs (1),
 .BR pull\-debian\-ddebs (1),
 .BR pull\-debian\-udebs (1),
+.BR pull\-ppa\-source (1),
+.BR pull\-ppa\-debs (1),
+.BR pull\-ppa\-ddebs (1),
+.BR pull\-ppa\-udebs (1),
 .BR pull\-uca\-source (1),
 .BR pull\-uca\-debs (1),
 .BR pull\-uca\-ddebs (1),
@@ -128,7 +140,7 @@ The default mirror when using the associated script.
 
 .SH AUTHOR
 .PP
-\fBpull\-pkg\fR was written by Dan Streetman <dan.streetman@canonical.com>,
+\fBpull\-pkg\fR was written by Dan Streetman <ddstreet@canonical.com>,
 based on the original \fBpull\-lp\-source\fR; it and this manual page
 were written by Iain Lane <iain@orangesquash.org.uk>.
 All are released under the GNU General Public License, version 3 or later.
