--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.172) UNRELEASED; urgency=medium
+
+  * autopkgtest: Add a allow-stderr restriction, as things log to stderr.
+
+ -- Mattia Rizzolo <mattia@debian.org>  Fri, 23 Aug 2019 10:07:40 +0200
+
 ubuntu-dev-tools (0.171) unstable; urgency=medium
 
   * Add an autopkgtest running the package tests.
