--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ ubuntu-dev-tools (0.172) UNRELEASED; urgency=medium
 
   [ Stefano Rivera ]
   * Build-Depend on pylint (>= 2, the Python 3 version), it replaced pylint3.
+  * Explicitly declare python dependencies in the python library modules (the
+    setup.py doesn't provide these) and ubuntu-dev-tools itself.
 
  -- Mattia Rizzolo <mattia@debian.org>  Fri, 23 Aug 2019 10:07:40 +0200
 
