--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-dev-tools (0.172) UNRELEASED; urgency=medium
+ubuntu-dev-tools (0.172) unstable; urgency=medium
 
   [ Mattia Rizzolo ]
   * autopkgtest: Add a allow-stderr restriction, as things log to stderr.
@@ -10,10 +10,10 @@ ubuntu-dev-tools (0.172) UNRELEASED; urgency=medium
   * dh_python2 doesn't generate a python dependency in ubuntu-dev-tools, now
     that it's scripts-only, so manually declare one.
   * Install pull-debian-source as python 3. It was ported, and doesn't work
-    under python 2 any more. (LP: #1841127)
+    under python 2 any more.  LP: #1841127
   * Use dh_install to split the build into multiple binary packages.
 
- -- Mattia Rizzolo <mattia@debian.org>  Fri, 23 Aug 2019 10:07:40 +0200
+ -- Mattia Rizzolo <mattia@debian.org>  Wed, 04 Sep 2019 08:44:51 +0200
 
 ubuntu-dev-tools (0.171) unstable; urgency=medium
 
