--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ ubuntu-dev-tools (0.173) UNRELEASED; urgency=medium
 
   * pull-debian-debdiff: Don't unpack the older source package, it will often
     use the same directory as the newer one, and break.
+  * Drop 404main, it's been totally broken for years.
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 04 Sep 2019 16:31:28 -0300
 
