--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 ubuntu-dev-tools (0.173) UNRELEASED; urgency=medium
 
+  [ Stefano Rivera ]
   * pull-debian-debdiff: Don't unpack the older source package, it will often
     use the same directory as the newer one, and break.
   * Drop 404main, it's been totally broken for years.
+
+  [ Scott Kitterman ]
+  * Update requestsync to python3 (Closes: #927147)
 
  -- Stefano Rivera <stefanor@debian.org>  Wed, 04 Sep 2019 16:31:28 -0300
 
