--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-dev-tools (0.173) UNRELEASED; urgency=medium
+ubuntu-dev-tools (0.173) unstable; urgency=medium
 
   [ Stefano Rivera ]
   * pull-debian-debdiff:
@@ -22,7 +22,7 @@ ubuntu-dev-tools (0.173) UNRELEASED; urgency=medium
   [ Mattia Rizzolo ]
   * Explicitly require Python3 >= 3.6.
 
- -- Mattia Rizzolo <mattia@debian.org>  Tue, 10 Sep 2019 10:55:34 +0200
+ -- Mattia Rizzolo <mattia@debian.org>  Tue, 10 Sep 2019 15:35:06 +0200
 
 ubuntu-dev-tools (0.172) unstable; urgency=medium
 
