--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.174) UNRELEASED; urgency=medium
+
+  * ubuntutools.misc: Replace Popen() calls with check_output()
+
+ -- Stefano Rivera <stefanor@debian.org>  Wed, 11 Sep 2019 13:30:54 -0300
+
 ubuntu-dev-tools (0.173) unstable; urgency=medium
 
   [ Stefano Rivera ]
