--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-dev-tools (0.174) UNRELEASED; urgency=medium
+
+  * reverse-depends: Support Reverse-Testsuite-Triggers and
+    Reverse-Build-Depends-Arch (LP: #1843614)
+
+ -- Stefano Rivera <stefanor@debian.org>  Wed, 11 Sep 2019 16:00:27 -0300
+
 ubuntu-dev-tools (0.173) unstable; urgency=medium
 
   [ Stefano Rivera ]
