--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-dev-tools (0.174) UNRLEASED; urgency=medium
+ubuntu-dev-tools (0.174) unstable; urgency=medium
 
   [ Stefano Rivera ]
   * reverse-depends:
@@ -20,7 +20,7 @@ ubuntu-dev-tools (0.174) UNRLEASED; urgency=medium
     + Handle multiple bug numbers in the command line.
     + Correctly get the bug summary.
 
- -- Mattia Rizzolo <mattia@debian.org>  Thu, 12 Sep 2019 14:34:16 +0200
+ -- Mattia Rizzolo <mattia@debian.org>  Thu, 26 Sep 2019 11:05:53 +0200
 
 ubuntu-dev-tools (0.173) unstable; urgency=medium
 
