--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-dev-tools (0.175) UNRELEASED; urgency=medium
+
+  * Trust the installed debian-keyring when checking validity of dsc
+    signatures.
+
+ -- Mattia Rizzolo <mattia@debian.org>  Mon, 28 Oct 2019 14:32:20 +0100
+
 ubuntu-dev-tools (0.174) unstable; urgency=medium
 
   [ Stefano Rivera ]
