document ddstreet contributions in d/copyright
Signed-off-by: Mattia Rizzolo <mattia@debian.org>

--- a/doc/pull-pkg.1
+++ b/doc/pull-pkg.1
@@ -86,7 +86,7 @@ Defaults to \fBsource\fR.
 Pull from: \fBdebian\fR, \fBuca\fR, \fBubuntu\fR, or a \fBppa\fR.
 \fBlp\fR can be used instead of \fBubuntu\fR.
 Any string containing \fBcloud\fR can be used instead of \fBuca\fR.
-If pulling from a ppa, you must specify the PPA.  Deafults to \fBubuntu\fR.
+If pulling from a ppa, you must specify the PPA.  Defaults to \fBubuntu\fR.
 .TP
 .B \-\-ppa\fR=ppa:\fIUSER/NAME\fR
 Applies only when \fBdistro\fR is \fIppa\fR.  Can be provided either as
