--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.177) UNRELEASED; urgency=medium
+
+  * wip.
+
+ -- Mattia Rizzolo <mattia@debian.org>  Sun, 23 Feb 2020 13:09:55 +0100
+
 ubuntu-dev-tools (0.176) unstable; urgency=medium
 
   [ Debian Janitor ]
