doc: update pull-pkg man page to clarify default pockets
Signed-off-by: Dan Streetman <ddstreet@canonical.com>

--- a/doc/pull-pkg.1
+++ b/doc/pull-pkg.1
@@ -12,7 +12,8 @@ pull\-pkg \- download a package for Debian, Ubuntu, UCA, or a PPA
 <\fIpackage name\fR>, or the latest version from the
 specified \fIrelease\fR.  To request a version from
 a particular pocket say \fIrelease\fB\-\fIpocket\fR (with a magic
-\fB\-release\fR for only the release pocket).
+\fB\-release\fR for only the release pocket).  If no \fIpocket\fR is
+specified, all pockets will be searched except -backports.
 If no \fIversion\fR or \fIrelease\fR is specified, the latest version in
 the development release will be downloaded.
 
