also update the docs
Signed-off-by: Mattia Rizzolo <mattia@debian.org>

--- a/doc/ubuntu-build.1
+++ b/doc/ubuntu-build.1
@@ -37,8 +37,9 @@ operations.
 .IP
 \fB\-a\fR ARCHITECTURE, \fB\-\-arch\fR=\fIARCHITECTURE\fR
 Rebuild or rescore a specific architecture. Valid
-architectures include: amd64, sparc, powerpc, i386,
-armel, armhf, arm64, ia64, lpia, hppa, ppc64el, s390x.
+architectures are:
+armel, armhf, arm64, amd64, hppa, i386, ia64,
+lpia, powerpc, ppc64el, riscv64, s390x, sparc.
 .TP
 Batch processing:
 .IP
@@ -60,8 +61,9 @@ Rescore builds to <priority>.
 .IP
 \fB\-\-arch2\fR=\fIARCHITECTURE\fR
 Affect only 'architecture' (can be used several
-times). Valid architectures are: amd64, sparc,
-powerpc, i386, armel, armhf, arm64, ia64, lpia, hppa.
+times). Valid architectures are:
+armel, armhf, arm64, amd64, hppa, i386, ia64,
+lpia, powerpc, ppc64el, riscv64, s390x, sparc.
 
 .SH AUTHORS
 \fBubuntu-build\fR was written by Martin Pitt <martin.pitt@canonical.com>, and
