--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.179) UNRELEASED; urgency=medium
+
+  * archive.py: Evaluate the filter() fixing syncpackage.
+
+ -- Stefano Rivera <stefanor@debian.org>  Fri, 29 Jan 2021 22:17:42 -0700
+
 ubuntu-dev-tools (0.178) unstable; urgency=medium
 
   [ Dan Streetman ]
