--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ ubuntu-dev-tools (0.181) UNRELEASED; urgency=medium
   [ Logan Rosen ]
   * fix a couple of remaining issues from the py2→py3 move.
 
+  [ Krytarik Raido ]
+  * Fix typo in the logging configuration.
+
  -- Mattia Rizzolo <mattia@debian.org>  Wed, 24 Feb 2021 14:23:29 +0100
 
 ubuntu-dev-tools (0.180) unstable; urgency=medium
