--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.181) UNRELEASED; urgency=medium
+
+  * WIP.
+
+ -- Mattia Rizzolo <mattia@debian.org>  Wed, 24 Feb 2021 14:23:29 +0100
+
 ubuntu-dev-tools (0.180) unstable; urgency=medium
 
   * Drop coverage in the autopkgtest, as python3-nose-cov is not in Debian.
