--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,32 @@
-ubuntu-dev-tools (0.181) UNRELEASED; urgency=medium
-
-  * WIP.
+ubuntu-dev-tools (0.181) unstable; urgency=medium
 
   [ Logan Rosen ]
-  * fix a couple of remaining issues from the py2→py3 move.
+  * Fix a couple of remaining issues from the py2→py3 move.
 
   [ Krytarik Raido ]
   * Fix typo in the logging configuration.
 
- -- Mattia Rizzolo <mattia@debian.org>  Wed, 24 Feb 2021 14:23:29 +0100
+  [ Dan Streetman ]
+  * pbuilder: Handle debian change from /updates to -security.  LP: #1916633
+    Starting in bullseye, the security suite is -security instead of /updates.
+  * backportpackage: Don't use SourcePackage() directly.  Closes: #983854
+    As the warning from 2010 says, don't use this class directly.
+
+  [ Balint Reczey ]
+  * mk-sbuild:
+    + Use eatmydata only with the dpkg command.
+      Eatmydata wrapping the build as well could break tests.
+      Thanks to Julian Andres Klode for suggesting this solution
+    + Use eatmydata by default.
+      Since only the dpkg is wrapped in eatmydata it should be the safe and
+      fast default. Eatmydata is widely used around apt thus it should be a
+      serious bug if a package can't be installed with eatmydata in use.
+
+  [ Marco Trevisan (Treviño) ]
+  * doc/mk-sbuild.1: Add documentation for --debootstrap-proxy and
+    DEBOOTSTRAP_PROXY.  LP: #1926166
+
+ -- Mattia Rizzolo <mattia@debian.org>  Sun, 02 May 2021 19:56:48 +0200
 
 ubuntu-dev-tools (0.180) unstable; urgency=medium
 
@@ -20,7 +38,7 @@ ubuntu-dev-tools (0.179) unstable; urgency=medium
 
   [ Stefano Rivera ]
   * archive.py: Evaluate the filter() fixing Debian source history queries
-    (LP: #1913330)
+    LP: #1913330
 
   [ Dan Streetman ]
   * allow running tests using tox
