--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-dev-tools (0.183) unstable; urgency=medium
+
+  [ Dan Streetman ]
+  * pbuilder-dist: include missing import
+
+ -- Stefano Rivera <stefanor@debian.org>  Tue, 08 Jun 2021 10:09:11 -0400
+
 ubuntu-dev-tools (0.182) unstable; urgency=medium
 
   [ Dan Streetman ]
