Upload to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ubuntu-dev-tools (0.186) UNRELEASED; urgency=medium
+ubuntu-dev-tools (0.186) unstable; urgency=medium
 
   * Replace nose with pytest (see: #997758).
 
- -- Stefano Rivera <stefanor@debian.org>  Sun, 24 Oct 2021 15:57:04 -0700
+ -- Stefano Rivera <stefanor@debian.org>  Sun, 24 Oct 2021 16:10:44 -0700
 
 ubuntu-dev-tools (0.185) unstable; urgency=medium
 
