backportpackage: fix automatic selection of the target release.
Signed-off-by: Mattia Rizzolo <mattia@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ ubuntu-dev-tools (0.187) UNRELEASED; urgency=medium
       Closes: #968316
   * backportpackage:
     + Support backporting to Debian releases.  LP: #974132
+    + Fix the guessing algorithm for the target release:
+      - for Debian: pick the current stable release.
+      - for Ubuntu: pick the current LTS release.
 
   [ Unit 193 ]
   * backportpackage:
