--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.176ubuntu20.04.1) focal; urgency=medium
+
+  * lpapicache: fix sorting in Archive.getUploadersForPackage().  LP: #1862372
+
+ -- Mattia Rizzolo <mattia@debian.org>  Sun, 05 Dec 2021 16:11:26 +0100
+
 ubuntu-dev-tools (0.176) unstable; urgency=medium
 
   [ Debian Janitor ]
