--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,11 @@ ubuntu-dev-tools (0.188) UNRELEASED; urgency=medium
     + Support Python 3.6 by calling functools.lru_cache() as a function, and
       avoid using @functools.cached_property (both new in Python 3.8).
 
+  [ Graham Inggs ]
+  * lpapicache.py:
+    + Use collections.abc.Callable instead of the long deprecated
+      collections.Callable.
+
  -- Mattia Rizzolo <mattia@debian.org>  Thu, 09 Dec 2021 17:54:27 +0100
 
 ubuntu-dev-tools (0.187) unstable; urgency=medium
