--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-dev-tools (0.188) UNRELEASED; urgency=medium
+ubuntu-dev-tools (0.188) unstable; urgency=medium
 
   [ Mattia Rizzolo ]
   * archive.py:
@@ -10,7 +10,7 @@ ubuntu-dev-tools (0.188) UNRELEASED; urgency=medium
     + Use collections.abc.Callable instead of the long deprecated
       collections.Callable.  LP: #1959541
 
- -- Mattia Rizzolo <mattia@debian.org>  Thu, 09 Dec 2021 17:54:27 +0100
+ -- Mattia Rizzolo <mattia@debian.org>  Mon, 07 Feb 2022 16:30:07 +0100
 
 ubuntu-dev-tools (0.187) unstable; urgency=medium
 
