--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.189) UNRELEASED; urgency=medium
+
+  * WIP.
+
+ -- Mattia Rizzolo <mattia@debian.org>  Mon, 07 Feb 2022 16:31:53 +0100
+
 ubuntu-dev-tools (0.188) unstable; urgency=medium
 
   [ Mattia Rizzolo ]
