--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 ubuntu-dev-tools (0.189) UNRELEASED; urgency=medium
 
-  * WIP.
+  [ Heinrich Schuchardt ]
+  * mk-sbuild: don't require pkg-config-<target>. LP: #1966881.
 
- -- Mattia Rizzolo <mattia@debian.org>  Mon, 07 Feb 2022 16:31:53 +0100
+ -- Matthias Klose <doko@debian.org>  Wed, 30 Mar 2022 15:36:04 +0200
 
 ubuntu-dev-tools (0.188) unstable; urgency=medium
 
