--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubuntu-dev-tools (0.189) UNRELEASED; urgency=medium
+ubuntu-dev-tools (0.189) unstable; urgency=medium
 
   [ Heinrich Schuchardt ]
   * mk-sbuild: don't require pkg-config-<target>. LP: #1966881.
@@ -6,7 +6,7 @@ ubuntu-dev-tools (0.189) UNRELEASED; urgency=medium
   [ Tobias Heider ]
   * mk-sbuild: document SCHROOT_TYPE zfs in the manpage.
 
- -- Matthias Klose <doko@debian.org>  Wed, 30 Mar 2022 15:36:04 +0200
+ -- Mattia Rizzolo <mattia@debian.org>  Mon, 04 Apr 2022 15:03:31 +0200
 
 ubuntu-dev-tools (0.188) unstable; urgency=medium
 
