--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.190) UNRELEASED; urgency=medium
+
+  *  WIP.
+
+ -- Mattia Rizzolo <mattia@debian.org>  Mon, 04 Apr 2022 15:05:39 +0200
+
 ubuntu-dev-tools (0.189) unstable; urgency=medium
 
   [ Heinrich Schuchardt ]
