--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,18 @@
-ubuntu-dev-tools (0.190) UNRELEASED; urgency=medium
-
-  *  WIP.
+ubuntu-dev-tools (0.190) unstable; urgency=medium
 
   [ Dimitri John Ledkov ]
   * mk-sbuild:
     + For ubuntu, fix the debootstrap script to "gutsy", so to allow using
       mk-sbuild for newer releases without requiring a newer debootstrap.
 
- -- Mattia Rizzolo <mattia@debian.org>  Mon, 04 Apr 2022 15:05:39 +0200
+  [ Gianfranco Costamagna ]
+  * pbuilder-dist: fix typo kernal/kernel
+
+  [ Benjamin Drung ]
+  * Add missing files to debian/copyright
+  * Bump Standards-Version to 4.6.1
+
+ -- Benjamin Drung <bdrung@debian.org>  Thu, 16 Jun 2022 10:55:17 +0200
 
 ubuntu-dev-tools (0.189) unstable; urgency=medium
 
