--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-dev-tools (0.191) UNRELEASED; urgency=medium
+
+  * WIP.
+
+ -- Mattia Rizzolo <mattia@debian.org>  Mon, 22 Aug 2022 17:55:53 +0200
+
 ubuntu-dev-tools (0.190) unstable; urgency=medium
 
   [ Dimitri John Ledkov ]
